--- a/AuthentificationService/pom.xml
+++ b/AuthentificationService/pom.xml
@@ -3,16 +3,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.7</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.niit.bej</groupId>
+        <artifactId>FoodieApp</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.niit.bej</groupId>
+
     <artifactId>AuthentificationService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>AuthentificationService</name>
     <description>AuthentificationService</description>
+
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2022.0.2</spring-cloud.version>
