EurekaServerApplication is created

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 
   <modules>
     <module>UserAuthenticationService</module>
+    <module>MerchantService</module>
   </modules>
 
   <properties>
