Changes made in the methods and properties

--- a/OrderService/src/main/resources/application.yml
+++ b/OrderService/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     mongodb:
       uri: mongodb://localhost:27017/OrderDb
   application:
-    name: merchantService
+    name: orderService
 eureka:
   client:
     service-url:
