--- a/ApiGateWay/pom.xml
+++ b/ApiGateWay/pom.xml
@@ -7,27 +7,19 @@
 		<artifactId>FoodieApp</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
-	<groupId>api-Gateway</groupId>
-	<artifactId>Api-Gateway</artifactId>
+	<groupId>com.niit.bej</groupId>
+	<artifactId>ApiGateWay</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Api-Gateway</name>
+	<name>ApiGateWay</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>11</java.version>
-		<spring-cloud.version>2021.0.7</spring-cloud.version>
-		<maven.test.skip>ture</maven.test.skip>
-		<skipTests>true</skipTests>
+		<java.version>17</java.version>
+		<spring-cloud.version>2022.0.3</spring-cloud.version>
 	</properties>
 	<dependencies>
-
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-gateway</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
 		<dependency>
@@ -35,14 +27,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+
 		<dependency>
-			<groupId>io.projectreactor</groupId>
-			<artifactId>reactor-test</artifactId>
-			<scope>test</scope>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-autoconfigure</artifactId>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-netflix-eureka-client</artifactId>
+			<version>3.1.6</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
