--- a/UserAuthenticationService/src/main/resources/application.yml
+++ b/UserAuthenticationService/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/AuthDb?createDatabaseIfNotExist=true
     username: root
-    password: Admin@123
+    password: Chithra04.@
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
