--- a/OrderService/pom.xml
+++ b/OrderService/pom.xml
@@ -3,12 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.7</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.niit.bej</groupId>
+        <artifactId>FoodieApp</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.niit.bej</groupId>
     <artifactId>OrderService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>OrderService</name>
@@ -41,10 +39,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.9.1</version>
-            <scope>compile</scope>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
         </dependency>
     </dependencies>
     <dependencyManagement>
