--- a/SpringEmail/src/main/resources/application.yml
+++ b/SpringEmail/src/main/resources/application.yml
@@ -1,9 +1,16 @@
+
 spring:
   mail:
     host: smtp.gmail.com
     port: 587
     username: jiffyfoodApp@gmail.com
-    password: jiffyfood123
+    password: ecqqjlsroxwwjtac
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
   application:
     name: emailService
 eureka:
@@ -12,3 +19,5 @@ eureka:
       defaultZone: http://localhost:8761/eureka
     fetch-registry: true
     register-with-eureka: true
+server:
+  port: 8085
