--- a/AdminService/pom.xml
+++ b/AdminService/pom.xml
@@ -3,12 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.1</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.niit.bej</groupId>
+        <artifactId>FoodieApp</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.niit.bej</groupId>
+
     <artifactId>AdminService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>AdminService</name>
@@ -57,5 +56,15 @@
             </plugin>
         </plugins>
     </build>
+    <repositories>
+        <repository>
+            <id>netflix-candidates</id>
+            <name>Netflix Candidates</name>
+            <url>https://artifactory-oss.prod.netflix.net/artifactory/maven-oss-candidates</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
 </project>
